build/log/idf_py_stdout_output_17754
[1/9] Performing build step for 'bootloader'
[1/1] cd "/home/isaias/esp-tflite-micro/dog detection/build/bootloader/esp-idf/esptool_py" && /home/isaias/esp/idf-tools/python_env/idf5.3_py3.10_env/bin/python /home/isaias/esp/idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/isaias/esp-tflite-micro/dog\ detection/build/bootloader/bootloader.bin
Bootloader binary size 0x6df0 bytes. 0x210 bytes (2%) free.
[2/7] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj 
/home/isaias/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-2747-g4f3cd0deb9-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/isaias/esp-tflite-micro/dog detection/build/config" -I/home/isaias/esp/idf/esp-idf/components/newlib/platform_include -I/home/isaias/esp/idf/esp-idf/components/freertos/config/include -I/home/isaias/esp/idf/esp-idf/components/freertos/config/include/freertos -I/home/isaias/esp/idf/esp-idf/components/freertos/config/xtensa/include -I/home/isaias/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/isaias/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/isaias/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/isaias/esp/idf/esp-idf/components/freertos/esp_additions/include -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/include -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/include/soc -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/dma/include -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/port/esp32/. -I/home/isaias/esp/idf/esp-idf/components/esp_hw_support/port/esp32/include -I/home/isaias/esp/idf/esp-idf/components/heap/include -I/home/isaias/esp/idf/esp-idf/components/log/include -I/home/isaias/esp/idf/esp-idf/components/soc/include -I/home/isaias/esp/idf/esp-idf/components/soc/esp32 -I/home/isaias/esp/idf/esp-idf/components/soc/esp32/include -I/home/isaias/esp/idf/esp-idf/components/hal/platform_port/include -I/home/isaias/esp/idf/esp-idf/components/hal/esp32/include -I/home/isaias/esp/idf/esp-idf/components/hal/include -I/home/isaias/esp/idf/esp-idf/components/esp_rom/include -I/home/isaias/esp/idf/esp-idf/components/esp_rom/include/esp32 -I/home/isaias/esp/idf/esp-idf/components/esp_rom/esp32 -I/home/isaias/esp/idf/esp-idf/components/esp_common/include -I/home/isaias/esp/idf/esp-idf/components/esp_system/include -I/home/isaias/esp/idf/esp-idf/components/esp_system/port/soc -I/home/isaias/esp/idf/esp-idf/components/esp_system/port/include/private -I/home/isaias/esp/idf/esp-idf/components/xtensa/esp32/include -I/home/isaias/esp/idf/esp-idf/components/xtensa/include -I/home/isaias/esp/idf/esp-idf/components/xtensa/deprecated_include -I/home/isaias/esp/idf/esp-idf/components/esp_timer/include -I/home/isaias/esp/idf/esp-idf/components/lwip/include -I/home/isaias/esp/idf/esp-idf/components/lwip/include/apps -I/home/isaias/esp/idf/esp-idf/components/lwip/include/apps/sntp -I/home/isaias/esp/idf/esp-idf/components/lwip/lwip/src/include -I/home/isaias/esp/idf/esp-idf/components/lwip/port/include -I/home/isaias/esp/idf/esp-idf/components/lwip/port/freertos/include -I/home/isaias/esp/idf/esp-idf/components/lwip/port/esp32xx/include -I/home/isaias/esp/idf/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/isaias/esp/idf/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/isaias/esp/idf/esp-idf/components/console -I/home/isaias/esp/idf/esp-idf/components/vfs/include -I/home/isaias/esp/idf/esp-idf/components/esp_vfs_console/include -I/home/isaias/esp/idf/esp-idf/components/spi_flash/include -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/third_party/ruy" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/third_party/kissfft" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/signal/micro/kernels" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/signal/src" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp-tflite-micro/signal/src/kiss_fft_wrappers" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp32-camera/driver/include" -I"/home/isaias/esp-tflite-micro/dog detection/managed_components/espressif__esp32-camera/conversions/include" -I/home/isaias/esp/idf/esp-idf/components/driver/deprecated -I/home/isaias/esp/idf/esp-idf/components/driver/i2c/include -I/home/isaias/esp/idf/esp-idf/components/driver/touch_sensor/include -I/home/isaias/esp/idf/esp-idf/components/driver/twai/include -I/home/isaias/esp/idf/esp-idf/components/driver/touch_sensor/esp32/include -I/home/isaias/esp/idf/esp-idf/components/esp_pm/include -I/home/isaias/esp/idf/esp-idf/components/esp_ringbuf/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_gpio/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_pcnt/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_gptimer/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_spi/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_mcpwm/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_ana_cmpr/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_i2s/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_sdmmc/include -I/home/isaias/esp/idf/esp-idf/components/sdmmc/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_sdspi/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_sdio/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_dac/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_rmt/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_tsens/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_sdm/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_i2c/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_uart/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_ledc/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_parlio/include -I/home/isaias/esp/idf/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -O2 "-fmacro-prefix-map=/home/isaias/esp-tflite-micro/dog detection=." -fmacro-prefix-map=/home/isaias/esp/idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj -c '/home/isaias/esp-tflite-micro/dog detection/main/detection_responder.cc'
/home/isaias/esp-tflite-micro/dog detection/main/detection_responder.cc: In function 'void RespondToDetection(float)':
/home/isaias/esp-tflite-micro/dog detection/main/detection_responder.cc:13:3: error: 'servo_setup' was not declared in this scope
   13 |   servo_setup();
      |   ^~~~~~~~~~~
ninja: build stopped: subcommand failed.
